Closed
Bug 476308
Opened 16 years ago
Closed 16 years ago
"Download jQuery" button is clickable from the left side of the screen to the button
Categories
(Core :: Layout: Form Controls, defect, P2)
Core
Layout: Form Controls
Tracking
()
VERIFIED
FIXED
mozilla1.9.2a1
People
(Reporter: spirit55555, Assigned: ventnor.bugzilla)
References
()
Details
(Keywords: regression, verified1.9.1)
Attachments
(3 files)
|
710 bytes,
text/html
|
Details | |
|
3.82 KB,
patch
|
roc
:
review+
roc
:
superreview+
roc
:
approval1.9.1+
|
Details | Diff | Splinter Review |
|
1.79 KB,
patch
|
roc
:
approval1.9.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2a1pre) Gecko/20090131 Minefield/3.2a1pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2a1pre) Gecko/20090131 Minefield/3.2a1pre
Minefield thinks that the button should start from the left side of the screen, and all the way to where the button really is. This makes the Footprint, CSS3 Compliant and Cross-browser links inaccessible.
Reproducible: Always
Steps to Reproduce:
1. Go to http://jquery.com/
2. Click on Lightweight Footprint, CSS3 Compliant or Cross-browser.
Actual Results:
It takes me to http://code.google.com/p/jqueryjs/downloads/detail?name=jquery-1.3.1.min.js&downloadBtn=
Expected Results:
It should take me to http://docs.jquery.com/Tutorials
Removing position: relative from the button seems to solve the problem.
It's not a problem in Firefox 3.0.5
Comment 1•16 years ago
|
||
regressed:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090127 Minefield/3.2a1pre
http://hg.mozilla.org/mozilla-central/rev/4a34b7ff26e2
fails
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090128 Minefield/3.2a1pre
http://hg.mozilla.org/mozilla-central/rev/42b8e2c66c5b
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=4a34b7ff26e2&tochange=42b8e2c66c5b
possibly: Bug 475197 ?
The button is positioned relative and contains an absolute positioned span with 'left: -9999999px;'. according to DomI, Minefield sees this as 'left:-1e+7px;'
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows Vista → All
Hardware: x86 → All
Comment 2•16 years ago
|
||
The link should be clickable.
(The testcase doesn't show the weird value for left)
Updated•16 years ago
|
Blocks: 475197
Keywords: regression
| Assignee | ||
Comment 3•16 years ago
|
||
Did you confirm this through backout? Unless the button uses box-shadow I heavily doubt the suspected bug is the culprit.
Comment 4•16 years ago
|
||
(In reply to comment #3)
> Did you confirm this through backout? Unless the button uses box-shadow I
> heavily doubt the suspected bug is the culprit.
No, apparently my local three is hooosed. Sorry about that. But I don't really see anything else in that list in comment 1 that would cause this. I'd love to be proven wrong, though.
BTW,
1. the latest Shiretoko (20090131, OSX) build is not affected.
2. it is really limited to <button>. I tried to reproduce the issue with a <span> inside a block element (<p>, set to block or inline-block), but that works correctly.
| Assignee | ||
Comment 5•16 years ago
|
||
It can't be... if it is, it's a bug in the display list.
Comment 6•16 years ago
|
||
Looks like a regression from bug 475197 to me. In particular, this part in nsButtonFrameRenderer:
+nsRect nsDisplayButtonBorderBackground::GetBounds(nsDisplayListBuilder* aBuilder)
+{
+ return mFrame->GetOverflowRect() + aBuilder->ToReferenceFrame(mFrame);
+}
In this case, the overflow rect covers everything to the left of the button due to the positioned span, right?
The button borderbackground goes on top of the dispay list, not in the background layer (see nsButtonFrameRenderer::DisplayButton). So that change causes all event delivery to anywhere in the overflow area to go to the button. That's wrong, no?
Flags: blocking1.9.2?
Yeah, that was a mistake. We need to use a separate display item for the shadow, one that doesn't catch events.
| Assignee | ||
Comment 8•16 years ago
|
||
Use a new display list item instead of changing the existing one.
Assignee: nobody → ventnor.bugzilla
Attachment #360170 -
Flags: superreview?(roc)
Attachment #360170 -
Flags: review?(roc)
Attachment #360170 -
Flags: superreview?(roc)
Attachment #360170 -
Flags: superreview+
Attachment #360170 -
Flags: review?(roc)
Attachment #360170 -
Flags: review+
Keywords: checkin-needed
Whiteboard: [needs landing]
BTW can you write a mochitest to check that box-shadows for various elements don't capture mouse clicks? Should be easy using elementFromPoint.
| Assignee | ||
Comment 10•16 years ago
|
||
Updated•16 years ago
|
Version: unspecified → Trunk
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
Attachment #360170 -
Flags: approval1.9.1+
Attachment #360230 -
Flags: approval1.9.1+
Comment 12•16 years ago
|
||
The patch doesn't seem to apply on branch.
Comment 13•16 years ago
|
||
Alright, bug 475197 hasn't landed yet on branch...
Comment 14•16 years ago
|
||
Verified on trunk with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090208 Minefield/3.2a1pre ID:20090208020444 and the identical build on Windows.
Status: RESOLVED → VERIFIED
Target Milestone: --- → mozilla1.9.2a1
Comment 15•16 years ago
|
||
(In reply to comment #13)
> Alright, bug 475197 hasn't landed yet on branch...
In which order should these two bugs be checked in ?
Updated•16 years ago
|
Keywords: checkin-needed
Whiteboard: [needs 191 landing] → [needs 191 landing: waiting for comment 15]
475197 has landed on branch now. This should be landed ASAP.
Flags: blocking1.9.2?
Keywords: checkin-needed
Whiteboard: [needs 191 landing: waiting for comment 15] → [needs 191 landing]
Comment 17•16 years ago
|
||
Comment 18•16 years ago
|
||
Verified with on 1.9.1 with builds on OS X and Windows:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b3pre) Gecko/20090227 Shiretoko/3.1b3pre ID:20090227020413
Keywords: fixed1.9.1 → verified1.9.1
Updated•16 years ago
|
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P2
You need to log in
before you can comment on or make changes to this bug.
Description
•