Bug 476308. Box-shadows for buttons should not capture events. r+sr=roc